--- a/erp-parent/erp-main-web/.settings/org.eclipse.wst.common.component
+++ b/erp-parent/erp-main-web/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module archiveName="erp-lib-common-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/erp-lib-common/erp-lib-common">
+        <dependent-module archiveName="erp-lib-common.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/erp-lib-common/erp-lib-common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="erp-main-web"/>
